apps/production/container-registry/internal/registry/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: container-registry-internal
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: container-registry-internal-registry
  template:
    spec:
      containers:
        - name: container-registry-internal
          image: "docker.io/registry:2.8"
          imagePullPolicy: Always
          #command: [ "/bin/sh", "-c", "cat /etc/docker/registry/config.yml && cat /auth/registry/htpasswd" ]
          ports:
            - name: registry
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: "/etc/docker/registry"
              name: "config"
            - mountPath: "/auth/registry"
              name: "htpasswd"
            - mountPath: "/var/lib/registry"
              name: "registry-volume"
          #livenessProbe:
          #  httpGet:
          #    path: /v2/
          #    port: registry
          #readinessProbe:
          #  httpGet:
          #    path: /v2/
          #    port: registry
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
      volumes:
        - name: config
          configMap:
            defaultMode: 420
            name: container-registry-internal-config
        - name: htpasswd
          secret:
            defaultMode: 420
            secretName: container-registry-internal-htpasswd
        - name: registry-volume
          persistentVolumeClaim:
            claimName: container-registry-internal-pvc
