apps/production/container-registry/internal/registry/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry-internal
spec:
  selector:
    app: container-registry-internal-registry
  ports:
    - name: http
      targetPort: 5000
      port: 5000
