apps/production/container-registry/internal/registry/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: container-registry-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry-internal.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: container-registry-internal
          port: http
      middlewares:
        - name: default-headers
  tls:
    secretName: local-hejsan-xyz-tls
